--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "17.0.2",
     "react-fb-image-grid": "^0.1.5",
     "react-native": "0.66.4",
+    "react-native-image-picker": "^4.7.0",
+    "react-native-image-viewing": "^0.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
