--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-image-picker": "^4.7.0",
     "react-native-image-viewing": "^0.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.10.1",
