--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.24.0",
     "react": "17.0.2",
     "react-fb-image-grid": "^0.1.5",
     "react-native": "0.66.4",
