--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@ahiho/react-native-attributed-text": "^1.1.2",
+    "@react-native-async-storage/async-storage": "^1.15.15",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-fb-image-grid": "^0.1.5",
     "react-native": "0.66.4",
