--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
     "moment": "^2.29.1",
+    "patch-package": "^6.4.7",
     "react": "17.0.2",
     "react-fb-image-grid": "^0.1.5",
     "react-native": "0.66.4",
@@ -28,9 +29,12 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.10.1",
+    "react-native-webview": "^11.17.0",
+    "react-native-youtube": "^2.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -49,7 +53,8 @@
     "typescript": "^4.4.4"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "^17",
+    "styled-components": "^5"
   },
   "jest": {
     "preset": "react-native",
